--- a/build.gradle
+++ b/build.gradle
@@ -12,4 +12,5 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation 'com.mapbox.mapboxsdk:mapbox-sdk-turf:4.9.0'
 }
