--- a/build.gradle
+++ b/build.gradle
@@ -15,4 +15,6 @@ dependencies {
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-turf:4.9.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-geojson:4.9.0'
     implementation 'com.mapbox.mapboxsdk:mapbox-sdk-services:4.9.0'
+    implementation "com.google.maps:google-maps-services:0.10.1"
+    implementation "org.slf4j:slf4j-simple:1.7.25"
 }
